Harden runtime lifecycle and recovery architecture (#26)
* Harden runtime lifecycle and recovery architecture

* Make yield recovery checks atomic